<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">CyanogenMod settings</string>
    <string name="application_settings_title_head">Application</string>
    <string name="application_settings_title_subhead">Application settings</string>
    <string name="application_settings_summary_head">Application moving, install location, communication filtering</string>
    <string name="display_settings_title_head">Display</string>
    <string name="display_settings_title_subhead">Display settings</string>
    <string name="display_settings_summary_head">Display backlight, animations, rotation</string>
    <string name="display_settings_summary_head_nobacklight">Display animations, rotation</string>
    <string name="input_settings_title_head">Input</string>
    <string name="input_settings_title_subhead">Input settings</string>
    <string name="input_settings_summary_head">Input behavior, buttons, haptic feedback</string>
    <string name="interface_settings_title_head">Interface</string>
    <string name="interface_settings_summary_head">Interface tweaks, overscrolling, render effect</string>
    <string name="lockscreen_settings_title_head">Lockscreen</string>
    <string name="lockscreen_settings_title_subhead">Lockscreen settings</string>
    <string name="lockscreen_settings_summary_head">Lockscreen gestures, style, unlock options</string>
    <string name="performance_settings_title_head">Performance</string>
    <string name="performance_settings_title_subhead">Performance settings</string>
    <string name="performance_settings_summary_head">Performance tweaks, JIT, VM heap size</string>
    <string name="sound_settings_title_head">Sound</string>
    <string name="sound_settings_title_subhead">Sound settings</string>
    <string name="sound_settings_summary_head">Sound volumes, audio focus, quiet hours</string>
    <string name="system_settings_title_head">System</string>
    <string name="system_settings_title_subhead">System settings</string>
    <string name="system_settings_summary_head">System changelog, stats, update notifications</string>
    <string name="updatenotify_title">Update notifications</string>
    <string name="updatenotify_summary">Get push notifications of updates</string>
    <string name="ui_title">User interface</string>
    <string name="pref_electron_beam_animation_on">Screen-on animation</string>
    <string name="pref_electron_beam_animation_off">Screen-off animation</string>
    <string name="pref_rotation_animation_title">Rotation animation</string>
    <string name="pref_rotation_animation_summary">Requires a reboot</string>
    <string name="tablet_tweaks_title_head">Tablet tweaks</string>
    <string name="tablet_tweaks_summary_head">Settings most useful for tablet devices collected in one place. Also working for phones</string>
    <string name="tablet_tweaks_sb_bottom_title">Bottom status bar</string>
    <string name="changelog_title">View changelog</string>
    <string name="gdx_call_screen1">Call features</string>
    <string name="gdx_call_screen2">Call me lounder, loop ringtone, custom carrier label etc.</string>
    <string name="gdx_call_screen_sound">Sound</string>
    <string name="gdx_call_screen_sound_pickup1">Pick up to call</string>
    <string name="gdx_call_screen_sound_pickup2">Picking up the phone calls the number in dialer</string>
    <string name="gdx_call_screen_sound_lounder1">Call Me Louder</string>
    <string name="gdx_call_screen_sound_lounder2">Louder ringer when phone is inside bags</string>
    <string name="gdx_call_screen_sound_loop1">Loop ringtone</string>
    <string name="gdx_call_screen_sound_loop2">Again and again and...</string>
    <string name="gdx_call_screen_sound_flipdown1">Flip down</string>
    <string name="gdx_call_screen_sound_flipdown2">Flippin down mutes the ringer</string>
    <string name="gdx_call_screen_buttons">Buttons</string>
    <string name="gdx_call_screen_buttons_back1">Back</string>
    <string name="gdx_call_screen_buttons_back2">Pressing back button ends call</string>
    <string name="gdx_call_screen_buttons_menu1">Menu</string>
    <string name="gdx_call_screen_buttons_menu2">Pressing menu button answers call</string>
    <string name="gdx_call_screen_other">Other</string>
    <string name="gdx_call_screen_other_carrier1">Custom carrier text</string>
    <string name="gdx_call_screen_other_carrier2">Appears on lockscreen/statusbar</string>
    <string name="gdx_alarm_screen1">Alarm</string>
    <string name="gdx_alarm_screen2">Math quiz, flip/shake actions, increasing volume etc.</string>
    <string name="gdx_alarm_screen_mathquiz1">Math quiz</string>
    <string name="gdx_alarm_screen_mathquiz2">Solve a math quiz to stop the Alarm</string>
    <string name="gdx_alarm_screen_flip1">Flip action</string>
    <string name="gdx_alarm_screen_flip2">Flip to snooze / dismiss the alarm</string>
    <string name="gdx_alarm_screen_shake1">Shake action</string>
    <string name="gdx_alarm_screen_shake2">Shake to snooze / dismiss the alarm</string>
    <string name="gdx_alarm_screen_increasing">Increasing volume</string>
    <string name="gdx_jelly_screen1">Jelly Beans</string>
    <string name="gdx_jelly_screen2">Status bar, notifications etc.</string>
    <string name="gdx_jelly_screen_status_bar_category">STATUS BAR</string>
    <string name="gdx_jelly_screen_information1">Notes</string>
    <string name="gdx_jelly_screen_information2">A reboot is required to apply settings!\n\n2012 © AChep@xda (artemchep@gmail.com)</string>
    <string name="gdx_jelly_screen_status_bar">Status bar panel</string>
    <string name="gdx_jelly_screen_status_bar_panel_transparency1">Status bar panel transparency</string>
    <string name="gdx_jelly_screen_status_bar_panel_transparency2">Set transparency of the Jelly Bean status bar panel</string>
    <string name="gdx_jelly_screen_status_bar_notification">Notifications</string>
    <string name="gdx_jelly_screen_status_bar_notification_bigger1">Bigger notifications</string>
    <string name="gdx_jelly_screen_status_bar_notification_bigger2">Experimental feature!</string>
    <string name="gdx_led_screen1">LED</string>
    <string name="gdx_led_screen2">Options to disable LED at the night</string>
    <string name="gdx_led_screen_enabled">Disable LED</string>
    <string name="gdx_led_screen_from1">From</string>
    <string name="gdx_led_screen_from2">When LED will be disabled</string>
    <string name="gdx_led_screen_to1">To</string>
    <string name="gdx_led_screen_to2">When LED will be enabled</string>
    <string name="gdx_other_screen1">Other</string>
    <string name="gdx_other_screen2">Ultra brightness, lockscreens, center clock etc.</string>
    <string name="gdx_other_screen_userinterface">User Interface</string>
    <string name="gdx_other_screen_status_bar_centerclock1">Center clock on status bar</string>
    <string name="gdx_other_screen_status_bar_centerclock2">Instead of on the right</string>
    <string name="gdx_other_screen_status_bar_transparency1">Status bar transparency</string>
    <string name="gdx_other_screen_status_bar_transparency2">Reboot to apply changes</string>
    <string name="gdx_other_screen_ringlock1">Ring Lockscreen</string>
    <string name="gdx_other_screen_ringlock2">Only basic functionality</string>
    <string name="gdx_other_screen_senselock1">Sense 3 Lockscreen</string>
    <string name="gdx_other_screen_senselock2">Only basic functionality</string>
    <string name="gdx_other_screen_hidemsgavatar">Hide avatar in SMS content</string>
    <string name="gdx_other_screen_ultrabrightness1">Ultra brightness</string>
    <string name="gdx_other_screen_ultrabrightness2">Increases the brightness level (may increase battery consumption)</string>
    <string name="gdx_other_screen_copypaste">Quick copy / paste</string>
    <string name="gdx_other_screen_updates1">Check-for-update hour</string>
    <string name="gdx_other_screen_updates2">Set hour for update-check</string>
    <string name="gdx_other_screen_about1">About</string>
    <string name="gdx_other_screen_about2">GingerDX by TeamFun</string>
    <string name="gdx_carrier_note">Empty to disable</string>
    <string name="gdx_carrier_btn_save">Save</string>
    <string name="gdx_carrier_btn_cancel">Cancel</string>
    <string name="pie_controls_title">Pie controls</string>
    <string name="pie_controls_summary">Settings for Pie Navigation</string>
    <string name="pie_color_change_title">Pie color controls</string>
    <string name="pie_gravity_title">Pie gravity</string>
    <string name="pie_gravity_summary">Select the location where the pie will be placed at</string>
    <string name="pie_mode_title">Pie style</string>
    <string name="pie_mode_summary">Manage how animations and status additions will be handled</string>
    <string name="pie_size_title">Pie size</string>
    <string name="pie_size_summary">Define pie controls size</string>
    <string name="pie_enable_color_title">Enable color overlay</string>
    <string name="pie_enable_color_summary">Enable/disable pie color overlay</string>
    <string name="pie_button_color_title">Change button color</string>
    <string name="pie_button_color_summary">Change button color overlay</string>
    <string name="pie_enable_control_title">Enable Pie control</string>
    <string name="pie_enable_control_summary">Enable/disable pie control</string>
    <string name="pie_background_button_color_title">Change background color</string>
    <string name="pie_background_button_color_summary">Change background color overlay</string>
    <string name="pie_choice_button_color_title">Change button choice color</string>
    <string name="pie_choice_button_color_summary">Change button choice color overlay</string>
    <string name="pie_battery_color_title">Change battery color</string>
    <string name="pie_battery_color_summary">Change battery color overlay</string>
    <string name="pie_chevron_color_title">Change chevron color</string>
    <string name="pie_chevron_color_summary">Change chevron color overlay</string>
    <string name="pie_clock_color_title">Change clock color</string>
    <string name="pie_clock_color_summary">Change clock color overlay</string>
    <string name="pie_outline_color_title">Change outline color</string>
    <string name="pie_outline_color_summary">Change outline color overlay</string>
    <string name="pie_gap_title">Pie gap</string>
    <string name="pie_gap_summary">Adjust the gap in between pie elements</string>
    <string name="pie_trigger_title">Trigger area</string>
    <string name="pie_trigger_summary">Determine the size of the region that registers swipes for pie navigation</string>
    <string name="pie_recent_controls_title">Pie recent control</string>
    <string name="pie_menu_controls_title">Pie menu control</string>
    <string name="pie_search_controls_title">Pie search control</string>
    <string name="pie_back_controls_title">Pie back control</string>
    <string name="pie_home_controls_title">Pie home control</string>
    <string name="pie_center_title">Middle alignment</string>
	<string name="pie_center_summary">Align pie in the middle of the screen, regardless of the activation position</string>
    <string name="input_pie_key_title">Pie item control</string>
    <string name="input_pie_key_summary">Choose pie item control activity</string>
    <string name="compass_title">Compass Calibrator</string>
    <string name="compass_summary">Calibrate you compass here</string>
    <string name="battery_title">Battery Settings</string>
    <string name="battery_summary">Battery tools for device</string>
    <string name="framework_settings">framework settings</string>
    <string name="framework_settings_summary">framework settings</string>
    <string name="font_settings">font settings</string>
    <string name="font_settings_summary">font settings</string>
    <string name="general_title">General</string>
</resources>