<?xml version="1.0" encoding="UTF-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- General settings -->
    <PreferenceCategory android:key="general_category"
        android:title="@string/general_title">
      <!-- Battery Monitor -->
        <PreferenceScreen android:key="battery_settings"
            android:title="@string/battery_title" android:summary="@string/battery_summary">
            <intent android:action="android.intent.action.MAIN"
                android:targetPackage="com.cyanogenmod.batterymonitor"
                android:targetClass="com.cyanogenmod.batterymonitor.activities.BatteryMonitor" />
        </PreferenceScreen>

	<PreferenceScreen
            android:title="@string/compass_title" android:summary="@string/compass_summary">
            <intent android:action="android.intent.action.MAIN"
                android:targetPackage="com.cyanogenmod.compasscalibrator"
                android:targetClass="com.cyanogenmod.compasscalibrator.activities.CompassCalibrator" />
        </PreferenceScreen>
    <!-- Font Settings -->
    <PreferenceScreen
    	  android:title="@string/framework_settings"
    	  android:summary="@string/framework_settings_summary"> 
        <intent android:targetPackage="com.cyanogenmod.cmfmwschanger"
        	android:action="android.intent.action.MAIN"
        	android:targetClass="com.cyanogenmod.cmfmwschanger.TypeFmwFresh" />
    </PreferenceScreen>
    <PreferenceScreen
    	  android:title="@string/font_settings"
    	  android:summary="@string/font_settings_summary"> 
        <intent android:targetPackage="com.cyanogenmod.cmfontschanger"
        	android:action="android.intent.action.MAIN"
        	android:targetClass="com.cyanogenmod.cmfontschanger.TypeFresh" />
    </PreferenceScreen>
        <!-- CMStats -->
        <!--<PreferenceScreen android:key="cmstats_settings"
            android:title="@string/cmstats_title" android:summary="@string/cmstats_summary">
            <intent android:action="android.intent.action.MAIN"
                android:targetPackage="com.cyanogenmod.stats"
                android:targetClass="com.cyanogenmod.stats.MainActivity" />
        </PreferenceScreen>-->

        <!-- Update Notifications -->
        <!--<PreferenceScreen android:key="updatenotify_settings"
            android:title="@string/updatenotify_title" android:summary="@string/updatenotify_summary">
            <intent android:action="android.intent.action.MAIN"
                android:targetPackage="com.cyanogenmod.updatenotify"
                android:targetClass="com.cyanogenmod.updatenotify.MainActivity" />
        </PreferenceScreen>-->

        <!-- Change Log -->
        <PreferenceScreen android:key="changelog"
            android:title="@string/changelog_title">
            <intent android:action="android.intent.action.MAIN"
                android:targetPackage="com.cyanogenmod.cmparts"
                android:targetClass="com.cyanogenmod.cmparts.activities.ChangeLog" />
        </PreferenceScreen>

    </PreferenceCategory>

</PreferenceScreen>
