<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" 
    android:orientation="vertical"
    android:layout_width="match_parent"
	android:minWidth="250dip"	android:layout_height="wrap_content">
 
    <TextView
        android:layout_marginTop="2dip"
		android:layout_marginLeft="10dip"
		android:layout_marginRight="10dip"
        android:layout_width="wrap_content" android:layout_height="wrap_content"
        android:text="@string/gdx_carrier_note" />

    <EditText android:id="@+id/carrier"
        android:maxLines="1"
        android:layout_marginTop="2dip"
		android:layout_marginLeft="10dip"
		android:layout_marginRight="10dip"
        android:layout_width="match_parent" android:layout_height="wrap_content"
        android:autoText="false"
        android:capitalize="none"
        android:scrollHorizontally="true" />
    
    <LinearLayout 
        android:orientation="horizontal"
        android:layout_marginTop="2dip"
        android:layout_width="fill_parent" 
		android:layout_height="wrap_content">
		
		<Button android:id="@+id/ok_button" 
			android:layout_width="0dip"
			android:layout_height="wrap_content"
			android:layout_weight="1" 
			android:text="@string/gdx_carrier_btn_save" />

		<Button android:id="@+id/cancel_button" 
			android:layout_width="0dip"
			android:layout_height="wrap_content"
			android:layout_weight="1" 
			android:text="@string/gdx_carrier_btn_cancel" />
 
 	</LinearLayout>
 	
</LinearLayout>
